# FAROS

./: .gitignore  .gitmodules  README.md  config.yaml  config_offload.yaml  config_raja.yaml  faros-compiledb.py  faros-config.py  harness.py  hotness.py
interception/: Makefile  clang++-faros  clang_driver.py  clang_faros.py  colors.py  exceptions.py  faros  faros.py  intercept.c  nvcc_faros.py
interception/tests/test_cmake/: CMakeLists.txt  test_cmake.py
interception/tests/test_cmake/src/: CMakeLists.txt  main.cpp
interception/tests/test_compile_single_file/: Makefile
interception/tests/test_mpi_openmp/: Makefile  main.c  test_mpi_openmp.py
interception/tests/test_report_generated/: Makefile  test_report_generated.py
interception/tests/test_simple_openmp/: Makefile  main.c
libs/faros/: faroslib.py
libs/optlib/: opt-stats.py  optdiff.py  optpmap.py  optrecord.py  optviewer.py
libs/renderers/: htmlviewer.py
opt-viewer/: opt-diff.py  opt-viewer.py  optdiff.py  optrecord.py  optviewer.py  style.css
patches/: CoMD.patch  CoSP2.patch  IS.patch  RSBench.patch  XSBench.patch  hpcg.patch  miniAMR.patch
patches/rodinia_3.1/openmp/: b+tree.patch  backprop.patch  bfs.patch  cfd.patch  heartwall.patch  hotspot.patch  hotspot3D.patch  kmeans.patch  lavaMD.patch  leukocyte.patch  lud.patch  mummergpu.patch  myocyte.patch  nn.patch  nw.patch  particlefilter.patch  pathfinder.patch  srad.patch  streamcluster.patch
